# munazzim

./: .gitignore  PLAN.md  README.md  flake.nix  pyproject.toml
scripts/: run_calendar_debug.py  run_tasks_debug.py
src/munazzim/: __init__.py  __main__.py  config.py  models.py  overrides.py  qalib.py  scheduler.py  tasks.py  templates.py  timeutils.py  validation.py
src/munazzim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/munazzim/data/: __init__.py
src/munazzim/data/templates/: __init__.py  foundational_flow.toml  study_flow.qalib
src/munazzim/services/: __init__.py  geolocation.py  google_calendar.py  google_tasks.py  prayer.py
src/munazzim/tui/: app.py  screens.py
tests/: __init__.py  test_google_tasks_service.py  test_overrides.py  test_plan_table_bindings.py  test_prayer_cache.py  test_prayer_service.py  test_qalib_parser.py  test_scheduler.py  test_task_table.py  test_tasks.py  test_templates.py  test_timeutils.py  test_tui_google_calendar.py  test_tui_google_tasks.py  test_tui_resize.py  test_validation.py
